# LicenseFinder

./: VERSION  license_finder-7.2.1.gem
.github/: publish.yml
features/features/cli/: cli_spec.rb
lib/license_finder/: configuration.rb  core.rb  package.rb  package_manager.rb  scanner.rb
lib/license_finder/cli/: base.rb  main.rb
lib/license_finder/package_managers/: poetry.rb
lib/license_finder/package_utils/: github.rb
spec/fixtures/poetry/: pyproject.toml
spec/fixtures/poetry-lock-with-pyproject-toml/: pyproject.toml
spec/lib/license_finder/: core_spec.rb
spec/lib/license_finder/package_managers/: poetry_spec.rb
spec/lib/license_finder/package_utils/: github_spec.rb
