[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Name <email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
six = "^1.17.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
six = "1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
